Stop positin fixed being squashed
The position relative was taking more precidence. It didn't seem to be
needed so it has been removed.

--- a/app/assets/stylesheets/frontend/views/_document-page.scss
+++ b/app/assets/stylesheets/frontend/views/_document-page.scss
@@ -76,9 +76,6 @@
   }
 
   .contextual-info {
-    margin-bottom: $gutter-one-third*-1;
-    position: relative;
-
     ul {
       list-style: none;
 
